# tiny-merkle

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: CI.yml
benches/: keccak_hash_merkle.rs
examples/: main.rs
src/: hash.rs  lib.rs  merkle.rs  proof.rs
tests/: common.rs  merkle_proof_test.rs
