[package]
name = "tiny-merkle"
version = "0.2.0-beta"
edition = "2021"
description =  "A tiny merkle tree library for Ethereum"
license = "MIT"
authors = ["tiny-merkle Developers"]
repository = "https://github.com/chiaos/merkletree"
readme = "README.md"
resolver = "2"
categories = ["cryptography", "merkle-tree", "ethereum", "merkle"]



[dependencies]
rayon = "1.8.0"

[features]
# default = ["rayon"]
rayon = []

[dev-dependencies]
tiny-keccak = { version = "2.0.2", features = ["sha3","keccak"] }
sha2 = "0.10.8"
hex-literal = "0.4"
hex = "0.4.3"
criterion = "0.5.1"


[[bench]]
name = "keccak_hash_merkle"
harness = false